; ModuleID = '/home/carl/AnghaBench/radare2/libr/anal/p/extr_anal_ppc_cs.c_getarg.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/anal/p/extr_anal_ppc_cs.c_getarg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Getarg = type { i32* }
%struct.TYPE_5__ = type { i32, i32, %struct.TYPE_4__, i64 }
%struct.TYPE_4__ = type { i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.Getarg*, i32)* @getarg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @getarg(%struct.Getarg* %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca %struct.Getarg*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i32*, align 8
  %8 = alloca %struct.TYPE_5__, align 8
  %9 = alloca %struct.TYPE_5__, align 8
  store %struct.Getarg* %0, %struct.Getarg** %4, align 8
  store i32 %1, i32* %5, align 4
  store i64 0, i64* %6, align 8
  %10 = load %struct.Getarg*, %struct.Getarg** %4, align 8
  %11 = getelementptr inbounds %struct.Getarg, %struct.Getarg* %10, i32 0, i32 0
  %12 = load i32*, i32** %11, align 8
  store i32* %12, i32** %7, align 8
  %13 = load i32, i32* %5, align 4
  %14 = icmp slt i32 %13, 0
  br i1 %14, label %18, label %15

15:                                               ; preds = %2
  %16 = load i32, i32* %5, align 4
  %17 = icmp sge i32 %16, 8
  br i1 %17, label %18, label %19

18:                                               ; preds = %15, %2
  store i64 0, i64* %3, align 8
  br label %47

19:                                               ; preds = %15
  %20 = load i32, i32* %5, align 4
  call void @INSOP(%struct.TYPE_5__* sret %9, i32 %20)
  %21 = bitcast %struct.TYPE_5__* %8 to i8*
  %22 = bitcast %struct.TYPE_5__* %9 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %21, i8* align 8 %22, i64 32, i1 false)
  %23 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 0
  %24 = load i32, i32* %23, align 8
  switch i32 %24, label %45 [
    i32 130, label %25
    i32 128, label %26
    i32 131, label %29
    i32 129, label %33
    i32 132, label %41
  ]

25:                                               ; preds = %19
  br label %45

26:                                               ; preds = %19
  %27 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 3
  %28 = load i64, i64* %27, align 8
  store i64 %28, i64* %6, align 8
  br label %45

29:                                               ; preds = %19
  %30 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 1
  %31 = load i32, i32* %30, align 4
  %32 = sext i32 %31 to i64
  store i64 %32, i64* %6, align 8
  br label %45

33:                                               ; preds = %19
  %34 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 2
  %35 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %34, i32 0, i32 1
  %36 = load i64, i64* %35, align 8
  %37 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 2
  %38 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %37, i32 0, i32 0
  %39 = load i64, i64* %38, align 8
  %40 = add nsw i64 %36, %39
  store i64 %40, i64* %6, align 8
  br label %45

41:                                               ; preds = %19
  %42 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 1
  %43 = load i32, i32* %42, align 4
  %44 = sext i32 %43 to i64
  store i64 %44, i64* %6, align 8
  br label %45

45:                                               ; preds = %19, %41, %33, %29, %26, %25
  %46 = load i64, i64* %6, align 8
  store i64 %46, i64* %3, align 8
  br label %47

47:                                               ; preds = %45, %18
  %48 = load i64, i64* %3, align 8
  ret i64 %48
}

declare dso_local void @INSOP(%struct.TYPE_5__* sret, i32) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
